1.1.5
- Fix for eval on replicaset Issue #684
- Use helpful error msg when native parser not compiled (Issue #685, https://github.com/aheckmann)
- Arbiter connect hotfix (Issue #681, https://github.com/fengmk2)
- Upgraded bson parser to 0.1.2 using gyp, deprecated support for node 0.4.X

1.1.4 2012-08-12
----------------
- Added Mongos connection type with a fallback list for mongos proxies, supports ha (on by default) and will attempt to reconnect to failed proxies.
- Documents can now have a toBSON method that lets the user control the serialization behavior for documents being saved.
- Gridstore instance object now works as a readstream or writestream (thanks to code from Aaron heckmann (https://github.com/aheckmann/gridfs-stream)).
- Fix gridfs readstream (Issue #607, https://github.com/tedeh).
- Added disableDriverBSONSizeCheck property to Server.js for people who wish to push the inserts to the limit (Issue #609).
- Fixed bug where collection.group keyf given as Code is processed as a regular object (Issue #608, https://github.com/rrusso2007).
- Case mismatch between driver's ObjectID and mongo's ObjectId, allow both (Issue #618).
- Cleanup map reduce (Issue #614, https://github.com/aheckmann).
- Add proper error handling to gridfs (Issue #615, https://github.com/aheckmann).
- Ensure cursor is using same connection for all operations to avoid potential jump of servers when using replicasets.
- Date identification handled correctly in bson js parser when running in vm context.
- Documentation updates
- GridStore filename not set on read (Issue #621)
- Optimizations on the C++ bson parser to fix a potential memory leak and avoid non-needed calls
- Added support for awaitdata for tailable cursors (Issue #624)
- Implementing read preference setting at collection and cursor level
   * collection.find().setReadPreference(Server.SECONDARY_PREFERRED)
   * db.collection("some", {readPreference:Server.SECONDARY})