@@ -1034,6 +1034,7 @@ Db.prototype.resetErrorHistory = function(options, callback) {
  *  - **max** {Number}, for geospatial indexes set the high bound for the co-ordinates.
  *  - **v** {Number}, specify the format version of the indexes.
  *  - **expireAfterSeconds** {Number}, allows you to expire data on indexes applied to a data (MongoDB 2.2 or higher)
+ *  - **name** {String}, override the autogenerated index name (useful if the resulting name is larger than 128 bytes)
  *
  * @param {String} collectionName name of the collection to create the index on.
  * @param {Object} fieldOrSpec fieldOrSpec that defines the index.
@@ -1117,6 +1118,7 @@ Db.prototype.createIndex = function(collectionName, fieldOrSpec, options, callba
  *  - **max** {Number}, for geospatial indexes set the high bound for the co-ordinates.
  *  - **v** {Number}, specify the format version of the indexes.
  *  - **expireAfterSeconds** {Number}, allows you to expire data on indexes applied to a data (MongoDB 2.2 or higher)
+ *  - **name** {String}, override the autogenerated index name (useful if the resulting name is larger than 128 bytes)
  *
  * @param {String} collectionName name of the collection to create the index on.
  * @param {Object} fieldOrSpec fieldOrSpec that defines the index.
